clang/test/BSC/Negative/Ownership/Owned/return_qualified_type/return_qualified_type.cbs
// RUN: %clang_cc1 -ast-dump -Wextra -Werror -verify %s


void* _Owned test1(void* p) {    //legal
    void* _Owned a = (void* _Owned)p;
    return a;
}

void* const test2(void* p) {   //expected-error {{'const' type qualifier on return type has no effect}} [-Werror,-Wignored-qualifiers]
    void* const a = (void* const)p;
    return a;
}

int _Owned test3(int size) { // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    int _Owned a = (int _Owned)size; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    return a;
}

int const test4(int size) {   //expected-error {{'const' type qualifier on return type has no effect}} [-Werror,-Wignored-qualifiers]
    int const a = (int const)size;
    return a;
}

int const _Owned test5(int size) { // expected-error {{type of 'const int' cannot be qualified by '_Owned'}}
    int const _Owned a = (int const _Owned)size; // expected-error {{type of 'const int' cannot be qualified by '_Owned'}}
    return a;
}


_Owned void* test7(void* p) { // expected-error {{type of 'void' cannot be qualified by '_Owned'}}
    _Owned void* a = (_Owned void*)(p); // expected-error {{type of 'void' cannot be qualified by '_Owned'}}
    return a;
}

const void* test8(void* p) {
    const void* a = (const void*)(p);
    return a;
}

T* _Owned safePtr<T>(T* p) {
    T* _Owned a = (T* _Owned)p;
    return a;
}

int testsafePtr(int* p1, float* p2) {
    int* _Owned sptr1 = safePtr<int>(p1);
    float* _Owned sptr2 = safePtr<float>(p2);
    if(sptr1) {
        return 0;
    }else if (sptr2) {
        return 1;
    }
    return 2;
}

